# monkeyc-lsp

./: .gitignore  .gitmodules  dune  dune-project  flake.nix
api_docs/: .gitignore  monkeyc.json  scrapy.cfg
api_docs/api_docs/: items.py  middlewares.py  parser.py  pipelines.py  settings.py
api_docs/api_docs/spiders/: modules.py
api_docs/tests/: test_parser.py
lsp-fiber/src/: rpc.ml
monkeyc-docs/lib/: docs.ml  dune
monkeyc-lsp-parser/lib/: io.ml  lexer.ml  parser.ml
monkeyc-lsp-server/lib/: configuration.ml  diagnostics.ml  document.ml  dune  hover_req.ml  import.ml  monkeyc.ml  monkeyc_lsp_server.ml  position.ml  progress.ml  range.ml  state.ml  version.ml
monkeyc-parser/lib/: dune  lexer.ml  location.ml  parser.ml  pprint.ml
monkeyc-parser/test/: dune
tests/: Accel.mc  Activity.mc  Logger.mc  SaveMenu.mc  View.mc
